@@ -3,16 +3,17 @@ package rzaevali.utils;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Streams;
 import org.apache.pdfbox.pdmodel.PDDocument;
-import rzaevali.exceptions.DocNotFoundException;
+import rzaevali.exceptions.*;
 import rzaevali.utils.DBUtils.*;
 import technology.tabula.*;
 import technology.tabula.extractors.ExtractionAlgorithm;
 import technology.tabula.extractors.SpreadsheetExtractionAlgorithm;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.URL;
 import java.time.LocalDate;
-import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
@@ -52,10 +53,17 @@ public class ScheduleUtils {
         public String getGroup() {
             return group;
         }
+
     }
 
-    public static String getSchedule(String groupId, String season) throws IOException,
-            DocNotFoundException {
+    public static int compareDates(List<String> first, List<String> second) {
+        LocalDate firstDate = parseDate(first.get(0));
+        LocalDate secondDate = parseDate(second.get(0));
+
+        return firstDate.compareTo(secondDate);
+    }
+
+    public static String getSchedule(String groupId, String season) throws VyatsuScheduleException {
         checkNotNull(groupId, "groupId must not be null");
         checkNotNull(season, "season must not be null");
 
@@ -63,67 +71,87 @@ public class ScheduleUtils {
             throw new DocNotFoundException("Unknown parameter season");
         }
 
-        DateRange range = DBUtils.getDateRange(groupId, season);
+        List<String> range = DBUtils.getDateRange(groupId, season);
+        String group = getGroupName(groupId);
+        String url = buildUrl(groupId, season, range);
 
         if (!SCHEDULE_CACHE_ENABLED) {
-            return dumpSchedule(getScheduleFromSite(groupId, season, range));
+            return JsonUtils.schedule(
+                    extractSchedule(url),
+                    group,
+                    range
+            );
         }
 
         Schedule cachedSchedule = DBUtils.getCachedSchedule(groupId, season);
 
-        if (cachedSchedule == null) {
-            Schedule schedule = getScheduleFromSite(groupId, season, range);
+        if (cachedSchedule == null || compareDates(range, cachedSchedule.getDateRange()) > 0) {
+            Schedule schedule = new Schedule(
+                    extractSchedule(url),
+                    group,
+                    range
+            );
             DBUtils.updateSchedule(groupId, season, schedule);
 
-            return dumpSchedule(schedule);
+            return JsonUtils.schedule(schedule);
         } else {
-            LocalDate date = parseDate(range.getFirst());
-            LocalDate cachedDate = parseDate(cachedSchedule.getDateRange().get(0));
-
-            if (date.compareTo(cachedDate) > 0) {
-                Schedule schedule = getScheduleFromSite(groupId, season, range);
-                DBUtils.updateSchedule(groupId, season, schedule);
-
-                return dumpSchedule(schedule);
-            } else {
-                return dumpSchedule(cachedSchedule);
-            }
+            return JsonUtils.schedule(cachedSchedule);
         }
     }
 
-    private static String dumpSchedule(Schedule schedule) {
-        return JsonUtils.getDefaultJson().toJson(schedule);
-    }
-
-    private static Schedule getScheduleFromSite(String groupId, String season, DateRange range) throws IOException {
-        URL url = new URL(String.format(
+    private static String buildUrl(String groupId, String season, List<String> range) {
+        return String.format(
                 BASE_URL,
                 groupId,
                 getSeasonKey(season),
-                range.getFirst(),
-                range.getSecond()
-        ));
+                range.get(0),
+                range.get(1)
+        );
+    }
 
-        List<String> rows = parsePDFFile(url);
+    public static String getGroupName(String groupId) {
+        checkNotNull(groupId, "groupId must not be null");
+
+        return "";
+    }
+
+    public static List<List<List<String>>> extractSchedule(String url) throws VyatsuScheduleException {
+        checkNotNull(url);
+
+        try {
+            return extractSchedule(new URL(url).openStream());
+        } catch (IOException ignore) {
+            throw new VyatsuServerException("vyatsu.ru server error");
+        }
+    }
+
+    public static List<List<List<String>>> extractSchedule(InputStream stream) throws VyatsuScheduleException {
+        checkNotNull(stream);
+
+        final int DAYS_COUNT = 14;
+        final int LESSONS_PER_DAY = 7;
+
+        List<String> rows = extractRows(stream);
+        if (rows.size() != DAYS_COUNT * LESSONS_PER_DAY) {
+            throw new PdfFileFormatException("Invalid pdf file");
+        }
+
         List<List<String>> days = IntStream.range(0, 14)
                 .mapToObj(day -> {
-                    int fromIndex = 2 + day * 7;
+                    int fromIndex = day * 7;
                     int toIndex = fromIndex + 7;
                     return rows.subList(fromIndex, toIndex);
                 })
                 .collect(Collectors.toList());
 
-        String group = rows.get(1).split(" ")[2];
-        List<List<List<String>>> weeks = ImmutableList.of(
+        return ImmutableList.of(
                 days.subList(0, 6),
                 days.subList(7, 13)
         );
-
-        return new Schedule(weeks, group, range.toList());
     }
 
-    private static List<String> parsePDFFile(URL url) throws IOException {
-        try (PDDocument pdfDocument = PDDocument.load(url.openStream())) {
+    private static List<String> extractRows(InputStream stream) throws PdfFileProcessingException {
+        try (PDDocument pdfDocument = PDDocument.load(stream)) {
             PageIterator pageIterator = new ObjectExtractor(pdfDocument).extract();
             ExtractionAlgorithm algorithm = new SpreadsheetExtractionAlgorithm();
 
@@ -135,7 +163,10 @@ public class ScheduleUtils {
                             .filter(text -> !text.equals(""))
                             .collect(Collectors.joining(" ")))
                     .map(text -> text.replaceFirst("\\d{2}:\\d{2}-\\d{2}:\\d{2}\\s*", ""))
+                    .skip(2)
                     .collect(Collectors.toList());
+        } catch (Exception ignore) {
+            throw new PdfFileProcessingException("Error while processing pdf file");
         }
     }
 
